--- a/form.html
+++ b/form.html
@@ -85,7 +85,7 @@ body{
                 <br>
                 <input type="email" name="email"  class="form-control  border border-info" placeholder="Your email">
                 <Br>
-                <textarea name="message" class="form-control border border-info  " placeholder="Test Message"></textarea>
+                <textarea name="message" class="form-control border border-info  " placeholder="Message"></textarea>
                 <br>
              <center>  <button  class="btn btn-outline-primary btn-lg btn-round waves-effect" style ="border-radius: 30px" type="submit"><i class="fa fa-paper-plane" aria-hidden="true"></i>Send</button></center>
               </form>
