--- a/index.html
+++ b/index.html
@@ -285,9 +285,9 @@
 <!-- 				
 						<div class="collapse navbar-collapse" id="navbarCollapse">
 							<div class="navbar-nav">
-								<a href="form.html" class="nav-item nav-link active">Contact Us</a>
+								<a href="form.html" class="nav-item nav-link active">Contact Us</a>-->
 							   
-							</div> -->
+							</div>
 						   
 						</div>
 					</nav>
