--- a/index.html
+++ b/index.html
@@ -266,8 +266,8 @@
 			<script src="assets/js/main.js"></script>
 			<br>
 			<br>
-            <div class="w3-bpttom">
-                <div class="w3-bar w3-white w3-wide w3-padding w3-card">
+            <div class="w3-bottom">
+                <div class="w3-bar w3-black w3-wide w3-padding w3-card">
                   <a href="upcoming.html" class="w3-bar-item w3-button"><b>Upcoming</b> Events</a>
                   <!-- Float links to the right. Hide them on small screens -->
                   <div class="w3-right w3-hide-small">
