--- a/training.html
+++ b/training.html
@@ -79,8 +79,8 @@
                         <br>
                         <textarea name="company" class="form-control border border-info  " placeholder="High School"></textarea>
                         <br>
-                    <textarea name="message" class="form-control border border-info  " placeholder="Message"></textarea>
-                    <br>
+<!--                     <textarea name="message" class="form-control border border-info  " placeholder="Message"></textarea>
+                    <br> -->
                     
     
                  <center>  <button  class="btn btn-outline-primary btn-lg btn-round waves-effect" style ="border-radius: 30px" type="submit"><i class="fa fa-paper-plane" aria-hidden="true"></i>Send</button></center>
