--- a/contact.html
+++ b/contact.html
@@ -80,7 +80,7 @@ body{
                     <br>
                     <input type="email" name="email"  class="form-control  border border-info" placeholder="Email">
                     <Br> 
-                        <input class="form-control border border-info" type="tel" placeholder="Phone Number" id="example-tel-input">
+                      <input type="telephone" name="telephone" id="telephone" placeholder="(555) 555-5555" class="form-control border border-info">
                         <br>
                         <textarea name="company" class="form-control border border-info  " placeholder="Company"></textarea>
                         <br>
