--- a/training.html
+++ b/training.html
@@ -78,7 +78,7 @@
                       <input type="telephone" name="telephone" id="telephone" placeholder="(555) 555-5555" class="form-control border border-info">
                         <!-- <input class="form-control border border-info" type="tel" placeholder="Phone Number" id="example-tel-input"> -->
                         <br>
-                        <textarea name="company" class="form-control border border-info  " placeholder="High School"></textarea>
+                        <textarea name="school" class="form-control border border-info  " placeholder="High School"></textarea>
                         <br>
                     <textarea name="message" class="form-control border border-info  " placeholder="Message"></textarea>
                     <br>
