--- a/index.html
+++ b/index.html
@@ -266,18 +266,20 @@
 			<script src="assets/js/main.js"></script>
 			<br>
 			<br>
-            <div class="w3-bottom">
-                <div class="w3-bar w3-black w3-wide w3-padding w3-card">
-                  <a href="upcoming.html" class="w3-bar-item w3-button"><b>Upcoming</b> Events</a>
-                  <!-- Float links to the right. Hide them on small screens -->
-                  <div class="w3-right w3-hide-small">
-                    <!-- <a href="index.html" class="w3-bar-item w3-button">Home</a> -->
-                    <a href="training.html" class="w3-bar-item w3-button">Apply For Training</a>
-                    <a href="contact.html" class="w3-bar-item w3-button">Services</a>
-                  </div>
-                </div>
-              </div>
-              
+			<nav class="navbar navbar-expand-lg fixed-bottom navbar-dark bg-dark">
+					<a class="navbar-brand" href="training.html">Training</a>
+					<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+					  <span class="navbar-toggler-icon"></span>
+					</button>
+					<div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+					  <div class="navbar-nav">
+						<a class="nav-item nav-link active" href="contact.html">Services <span class="sr-only">(current)</span></a>
+						<!-- <a class="nav-item nav-link" href="training.html">Training</a> -->
+						<a class="nav-item nav-link" href="upcoming.html">Upcoming</a>
+						<!-- <a class="nav-item nav-link" href="#">Disabled</a> -->
+					  </div>
+					</div>
+				  </nav>
 
 	</body>
 </html>
