--- a/upcoming.html
+++ b/upcoming.html
@@ -9,6 +9,8 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
 <body>
 
 <!-- Navbar (sit on top) -->
@@ -41,22 +43,75 @@
 
 
   <!-- About Section -->
-  <div class="w3-container w3-padding-32" id="about">
-    <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">Database Training</h3>
-    <p> Our first database training course will begin September 9th!
-    </p>
+  <center><div class="w3-container w3-padding-32" id="about"></center>
+   <center><h2 class="w3-border-bottom w3-border-light-grey w3-padding-16">Database Training!</h2></center> 
+    <center><h4> Our first database training course will begin September 9th!
+    </h4></center>
   </div>
-
-  
-  
-<!-- Image of location/map -->
-<div class="w3-container">
-  <!-- <img src="photo.jpg" class="w3-image" style="width:100%"> -->
 </div>
+  
+  <style>
+    /* Make the image fully responsive */
+    .carousel-inner img {
+      width: 70%;
+      height: 50%;
+    }
+  </style>
+
+<center><div class="w3-container w3-padding-32" id="about"></center>
+  <center><h2 class="w3-border-bottom w3-border-light-grey w3-padding-16">Meet the team!</h2></center> 
+   <center><h4> 
+   </h4></center>
+ </div>
+</div>
+    
+    <div id="demo" class="carousel slide" data-ride="carousel">
+
+      <!-- Indicators -->
+      <ul class="carousel-indicators">
+        <li data-target="#demo" data-slide-to="0" class="active"></li>
+        <li data-target="#demo" data-slide-to="1"></li>
+        <li data-target="#demo" data-slide-to="2"></li>
+        <li data-target="#demo" data-slide-to="3"></li>
+        <li data-target="#demo" data-slide-to="4"></li>
+        <!-- <li data-target="#demo" data-slide-to="5"></li> -->
+      </ul>
+
+      <!-- The slideshow -->
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <center><img src="Building.jpg" width="1100" height="200"</center>
+        </div>
+        <div class="carousel-item">
+          <center><img src="frankie.jpg" width="1100" height="200"></center>
+        </div>
+        <div class="carousel-item">
+          <center><img src="Fortisure3.jpg" width="1100" height="200"></center>
+        </div>
+        <div class="carousel-item">
+          <center><img src="Fortisure4.jpg" width="1100" height="200"></center>
+        </div>
+        <!-- <div class="carousel-item">
+          <center><img src="Fortisure5.jpg" width="1100" height="200"></center>
+        </div> -->
+        <div class="carousel-item">
+          <center><img src="saraand.jpg" width="1100" height="200"></center>
+        </div>
+      </div>
+
+      <!-- Left and right controls -->
+      <a class="carousel-control-prev" href="#demo" data-slide="prev">
+        <span class="carousel-control-prev-icon"></span>
+      </a>
+      <a class="carousel-control-next" href="#demo" data-slide="next">
+        <span class="carousel-control-next-icon"></span>
+      </a>
+    </div>
 
 <!-- End page content -->
-</div>
 
+<br>
+<br>
 
 <!-- Footer -->
 <footer class="w3-center w3-black w3-padding-16">
