--- a/upcoming.html
+++ b/upcoming.html
@@ -44,9 +44,9 @@
 
   <!-- About Section -->
   <center><div class="w3-container w3-padding-32" id="about"></center>
-   <center><h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">Database Training!</h3></center> 
-    <center><h6> Our first database training course will begin September 9th!
-    </h6></center>
+   <center><h2 class="w3-border-bottom w3-border-light-grey w3-padding-16">Database Training!</h2></center> 
+    <center><h4> Our first database training course will begin September 9th!
+    </h4></center>
   </div>
 </div>
   
@@ -74,7 +74,7 @@
         <li data-target="#demo" data-slide-to="2"></li>
         <li data-target="#demo" data-slide-to="3"></li>
         <li data-target="#demo" data-slide-to="4"></li>
-        <!-- <li data-target="#demo" data-slide-to="5"></li> -->
+        <li data-target="#demo" data-slide-to="5"></li>
       </ul>
 
       <!-- The slideshow -->
@@ -91,9 +91,9 @@
         <div class="carousel-item">
           <center><img src="Fortisure4.jpg" width="1100" height="200"></center>
         </div>
-        <!-- <div class="carousel-item">
-          <center><img src="Fortisure5.jpg" width="1100" height="200"></center>
-        </div> -->
+        <div class="carousel-item">
+          <center><img src="rob.jpg" width="1100" height="200"></center>
+        </div>
         <div class="carousel-item">
           <center><img src="saraand.jpg" width="1100" height="200"></center>
         </div>
